--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -160,7 +160,7 @@ $mode-base-form-input-background-color-dark: $gray-dark-level-1;
 $mode-top-bar-border-color-light: black;
 $mode-top-bar-border-color-dark: black;
 $mode-top-bar-background-color-light: $gray-light-level-5;
-$mode-top-bar-background-color-dark: $gray-dark-level-9;
+$mode-top-bar-background-color-dark: $gray-dark-level-11;
 $mode-top-bar-button-border-color-light: $mode-home-text-color-light;
 $mode-top-bar-button-border-color-dark: $gray-level-1;
 $mode-top-bar-button-background-color-light: $mode-home-background-color-light;
